@@ -1467,6 +1467,35 @@ BEGIN
     CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,205,143
 END
 
+IDD_PROCRECORD DIALOGEX 0, 0, 260, 202
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Process Record"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "Close",IDOK,203,181,50,14
+    LTEXT           "Name:",IDC_STATIC,7,9,22,8
+    EDITTEXT        IDC_PROCESSNAME,39,9,214,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    LTEXT           "Parent:",IDC_STATIC,7,21,25,8
+    EDITTEXT        IDC_PARENT,39,21,214,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    ICON            "",IDC_FILEICON,14,49,21,20
+    GROUPBOX        "File",IDC_FILE,7,38,246,79
+    EDITTEXT        IDC_NAME,44,48,182,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_COMPANYNAME,44,60,183,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    LTEXT           "Version:",IDC_STATIC,15,72,27,8
+    EDITTEXT        IDC_VERSION,44,72,183,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    LTEXT           "Image File Name:",IDC_STATIC,15,86,56,8
+    EDITTEXT        IDC_FILENAME,15,96,211,12,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "Open",IDC_OPENFILENAME,230,95,17,15,BS_BITMAP
+    LTEXT           "Command Line:",IDC_STATIC,7,123,50,8
+    EDITTEXT        IDC_CMDLINE,65,121,188,12,ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           "Started:",IDC_STATIC,7,139,28,8
+    EDITTEXT        IDC_STARTED,65,137,188,12,ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           "Terminated:",IDC_STATIC,7,155,40,8
+    EDITTEXT        IDC_TERMINATED,65,153,188,12,ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           "Session ID:",IDC_STATIC,7,170,37,8
+    LTEXT           "Static",IDC_SESSIONID,50,170,19,8
+END
+
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -1898,6 +1927,14 @@ BEGIN
         RIGHTMARGIN, 212
         TOPMARGIN, 7
         BOTTOMMARGIN, 168
+    END
+
+    IDD_PROCRECORD, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 253
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 195
     END
 END
 #endif    // APSTUDIO_INVOKED
